<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context="fr.mistercraft.drone.commander.AboutTab">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="2dp"
                android:onClick="onTwitter"
                app:layout_constraintEnd_toStartOf="@+id/youtube"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AboutDev"
                app:srcCompat="@drawable/ic_twitter" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/legalcontent"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageButton
                android:id="@+id/ether"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="2dp"
                android:onClick="onEth"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/github"
                app:layout_constraintTop_toBottomOf="@+id/AboutDev"
                app:srcCompat="@drawable/ic_ethereum" />

            <ImageButton
                android:id="@+id/youtube"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="2dp"
                android:onClick="onYt"
                app:layout_constraintEnd_toStartOf="@+id/github"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/AboutDev"
                app:srcCompat="@drawable/ic_youtube" />

            <TextView
                android:id="@+id/AboutDev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/aboutdev"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_about" />

            <EditText
                android:id="@+id/ethaddr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:cursorVisible="true"
                android:ems="10"
                android:fontFamily="monospace"
                android:freezesText="true"
                android:inputType="none"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:text="@string/ethaddr"
                android:textAlignment="viewEnd"
                android:textIsSelectable="true"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ether" />

            <TextView
                android:id="@+id/Paypal_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/mypapayladress"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ethaddr" />

            <TextView
                android:id="@+id/AboutApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/aboutapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_about"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/github"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:elevation="2dp"
                android:onClick="onGit"
                app:layout_constraintEnd_toStartOf="@+id/ether"
                app:layout_constraintStart_toEndOf="@+id/youtube"
                app:layout_constraintTop_toBottomOf="@+id/AboutDev"
                app:srcCompat="@drawable/ic_github" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/legal"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/AboutApp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/thanks"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Paypal_address" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/thankscontent"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
